SF Primes/src/objects/Cobalt_Monthly_Maintenance_History__c.object
<CustomObject>
    <description>Used by CB Services to track history for Monthly Maintence (Created to import previous SF Monthly Maintenance history from Cobalt Advantage SF Instance)</description>
    <fields>
        <fullName>Cobalt_Consolidation_ID__c</fullName>
        <externalId>true</externalId>
        <label>Cobalt Consolidation ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Field__c</fullName>
        <label>Field</label>
        <length>200</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Monthly_Maintenance__c</fullName>
        <label>Monthly Maintenance</label>
        <referenceTo>Monthly_Maintenance__c</referenceTo>
        <relationshipLabel>Monthly Maintenance History</relationshipLabel>
        <relationshipName>Monthly_Maintenance_History</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>New_Value__c</fullName>
        <label>New Value</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_Value__c</fullName>
        <label>Old Value</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <label>Monthly Maintenance History</label>
    <nameField>
        <displayFormat>MMH-{000000000}</displayFormat>
        <label>MM History Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Monthly Maintenance History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>